attempt to fix background gap on mobile phones

--- a/src/style/homepage.css
+++ b/src/style/homepage.css
@@ -9,6 +9,15 @@ body[data-state="home"] {
     background-size: cover;
     background-repeat: no-repeat;
     padding: 0;
+    position: fixed;
+    z-index: -1;
+    width: calc(100% - 60px);
+}
+
+body[data-state="home"] .content-area, body[data-state="home"] .content-area > * {
+    background: transparent;
+    margin: 0;
+    padding: 0;
 }
 
 body[data-state="home"] .content-area {
@@ -17,12 +26,6 @@ body[data-state="home"] .content-area {
     justify-content: center;
     height: 100%;
     max-width: none;
-}
-
-body[data-state="home"] .content-area, body[data-state="home"] .content-area > * {
-    background: transparent;
-    margin: 0;
-    padding: 0;
 }
 
 body[data-state="home"] .content-area h1 {
